<resources>
    <string name="app_name">Carbon</string>
    <string name="company_name">Carbon</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_fullname">Fullname</string>
    <string name="prompt_confirmpass">Confirm Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_google">Continue with Google</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="loading">Loading…</string>

    <string name="signin_text">Begin your zero \n carbon footprint journey</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Signup</string>
    <string name="sign_up_message">Don\'t have an account?</string>
    <string name="sign_out">Sign Out</string>

    <string name="let_us_know">Let us know you better</string>
    <string name="which_trans"> Which transportation do you use the most?</string>

    <string name="car">Car</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="public_transport">Public Transport</string>
    <string name="bike">Bike</string>
    <string name="uber">Uber</string>

    <string name="which_vehicle_brand">Please choose your vehicle brand and model</string>

    <string-array name="car_brand">
        <item>Suzuki</item>
        <item>Tesla</item>
        <item>Toyota</item>
    </string-array>

    <string-array name="car_class">
        <item>Class A</item>
        <item>Class B</item>
        <item>Class C</item>
    </string-array>
    <string name="title_activity_home">HomeActivity</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="save">Save</string>
    <string name="or">or</string>

    <string name="register_did_you_know_header">Did you know?</string>
    <string name="register_did_you_know_body1">According to data from the Global Carbon Project, Indonesia\'s per capita carbon dioxide emissions in 2019 were 2.1 metric tons per person per year.</string>
    <string name="register_did_you_know_body2">Indonesia is an emerging economy and has experienced rapid industrialization and urbanization in recent decades, which has led to increased energy consumption and higher carbon emissions. \n\n Our country relies heavily on fossil fuels such as coal for energy production, which is a significant contributor to greenhouse gas emissions.</string>
    <string name="register_did_you_know_body3">In 2045, Indonesia will mark its centenary as an independent nation. As a country with a large and young population, rich natural resources, and a strategic location in Southeast Asia, Indonesia has the potential to become a major economic and political power in the region.</string>

    <string name="register_begin_journey_body">Fighting climate change requires collective action from individuals, communities, businesses, and governments. Each individual`s actions may seem small, but they can collectively make a significant impact in reducing carbon emissions and mitigating the effects of climate change.</string>
    <string name="begin_journey">Begin Journey</string>

    <string name="component_emission_tracker_title">%1$s emission contribution</string>
    <string name="component_emission_tracker_percentage">%1$d%% lower than average indonesian</string>
    <string name="emission_value">%1$d CO2e</string>

    <string name="menu_home">Home</string>
    <string name="menu_my_activity">My Activity</string>
    <string name="menu_account">Account</string>
    <string name="menu_edit">Edit</string>

    <string name="km_8">8 km</string>
    <string name="h_24">24H</string>
    <string name="w_1">1W</string>
    <string name="m_1">1M</string>
    <string name="y_1">1Y</string>
    <string name="all">All</string>

    <string name="home_greetings">Good morning</string>
    <string name="home_travel_activities">Travel activities</string>
    <string name="home_news_header">Hear some good news</string>
    <string name="home_news_date">UNDP Climate - May 7</string>
    <string name="home_news_title">Small green business are crucial for the low-carbon…</string>
    <string name="home_news_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu laoreet diam. Aenean rhoncus dui nec arcu sodales scelerisque.</string>
    <string name="home_products_header">Gear up your journey</string>
    <string name="home_action_add_activity">Add Activity</string>
    <string name="home_choose_activity">Choose Activity</string>
    <string name="home_activity_eating">I\'m eating/drinking</string>
    <string name="home_activity_eating_detail">Scan up to 15+ food/drink types</string>
    <string name="home_activity_traveling">I\'m traveling</string>
    <string name="home_activity_traveling_detail">Walking, cycling, driving, or using public transport</string>
    <string name="home_activity_custom">Other</string>
    <string name="home_activity_custom_detail">Tell us what you are up to</string>

    <string name="confirm">Confirm</string>

    <string name="emission_generated">Emission Generated</string>
    <string name="min_travel_distance">Minimum travel distance &lt;font color="#FFFFFF">%1$dm&lt;/font></string>
    <string name="statistics">Statistics</string>
    <string name="travel_distance_km">%1$d km</string>
    <string name="travel_by_walk">Travel by walk</string>
    <string name="travel_by_bike">Travel by bike</string>
    <string name="travel_by_car">Travel by car</string>
    <string name="travel_by_public_transport">Travel by public transport</string>
    <string name="placeholder_name">Vince Aurelius</string>
    <string name="placeholder_email">vince@personal.com</string>
    <string name="general">General</string>
    <string name="opt_live_location">Live location</string>
    <string name="opt_manage_permission">Manage permission</string>

    <string name="scan_object_waiting">Waiting for object...</string>
    <string name="scan_object_info">No information available</string>
</resources>