<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupPreferenceActivity"
    android:background="@drawable/bg_signin" >

    <TextView
        android:id="@+id/let_us_know"
        android:layout_width="358dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="179dp"
        android:text="@string/let_us_know"
        android:textAppearance="@style/let_us_know"
        android:gravity="center_horizontal|top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/which_trans"
        android:layout_width="335dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="27dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="238dp"
        android:text="@string/which_trans"
        android:textAppearance="@style/which_trans"
        android:gravity="top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="314dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:singleSelection="true"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="12dp"
                android:layout_toEndOf="@id/chip5"
                android:text="@string/motorcycle" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@id/chip4"
                android:text="@string/public_transport" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/chip5"
                android:layout_alignParentStart="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:text="@string/bike" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/chip5"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                android:layout_toEndOf="@id/chip2"
                android:text="@string/uber" />
        </RelativeLayout>

    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>