<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cet_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/component_emission_tracker_title"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/cet_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emission_value"
                android:textColor="@color/black" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/cet_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="50"
                app:trackThickness="8dp" />

            <TextView
                android:id="@+id/cet_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/component_emission_tracker_percentage"
                android:textColor="@color/black" />
        </LinearLayout>

</merge>