<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginFragment">

    <ImageView
        android:layout_width="172dp"
        android:layout_height="40dp"
        android:layout_marginTop="122dp"
        android:background="@drawable/logo_carbon"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="358dp"
        android:layout_height="70dp"
        android:layout_marginTop="186dp"
        android:gravity="center_horizontal|top"
        android:textAppearance="@style/TextSpec.Heading1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/signin_text" />

    <EditText
        android:id="@+id/l_email"
        android:layout_width="358dp"
        android:layout_height="56dp"
        android:layout_marginTop="312dp"
        android:autofillHints="@string/prompt_email"
        android:background="@drawable/input_text_background"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/l_password"
        android:layout_width="358dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/prompt_password"
        android:background="@drawable/input_text_background"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:padding="16dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l_email" />

    <Button
        android:id="@+id/l_login"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/signin_button_background"
        android:text="@string/action_sign_in"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l_password"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/l_login_google"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_gravity="start"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/google_signin_button_background"
        android:drawableLeft="@drawable/google_logo"
        android:enabled="true"
        android:text="@string/action_sign_in_google"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l_login"
        app:layout_constraintVertical_bias="0.2" />

    <ProgressBar
        android:id="@+id/l_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/l_password"
        app:layout_constraintStart_toStartOf="@+id/l_password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/l_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/l_login_google" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/sign_up_message"
        android:textAllCaps="true"
        android:textColor="@color/light_grey"
        app:layout_constraintEnd_toStartOf="@+id/l_signup"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l_login_google" />

</androidx.constraintlayout.widget.ConstraintLayout>